# my_calculator

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  randNumGen.cpp  simpleCal.cpp
